--- a/helloworld/package.json
+++ b/helloworld/package.json
@@ -30,16 +30,16 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.71.0",
-    "@types/glob": "^8.0.0",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "16.x",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "eslint": "^8.24.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.0.0",
-    "typescript": "^4.8.4",
-    "@vscode/test-electron": "^2.1.5"
+    "@types/vscode": "1.71.0",
+    "@types/glob": "8.0.0",
+    "@types/mocha": "10.0.0",
+    "@types/node": "18.8.1",
+    "@typescript-eslint/eslint-plugin": "5.39.0",
+    "@typescript-eslint/parser": "5.39.0",
+    "eslint": "8.24.0",
+    "glob": "8.0.3",
+    "mocha": "10.0.0",
+    "typescript": "4.8.4",
+    "@vscode/test-electron": "2.1.5"
   }
 }
